--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "Scott Sarsfield <scott.m.sarsfield@ey.com>",
   "license": "UNLICENSED",
   "dependencies": {
+    "execa": "^3.4.0",
+    "globby": "^10.0.1",
+    "inquirer": "^7.0.0",
     "jscodeshift": "^0.6.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "meow": "^5.0.0",
+    "path": "^0.12.7"
   },
   "bin": {
     "jestify": "./index.js"
