--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "execa": "^3.4.0",
     "globby": "^10.0.1",
     "inquirer": "^7.0.0",
+    "jest-codemods": "^0.22.1",
     "jscodeshift": "^0.6.4",
     "lodash": "^4.17.15",
     "meow": "^5.0.0",
