fix babel ignore

--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
   "scripts": {
     "start": "./index.js",
     "lint": "npx eslint .",
-    "build": "./node_modules/.bin/babel src --out-dir=dist --ignore 'src/transforms/**/__tests__/**','transforms/**/__testfixtures__/**'"
+    "build": "./node_modules/.bin/babel src --out-dir=dist --ignore 'src/transforms/**/__tests__/**','src/transforms/**/__testfixtures__/**'"
   }
 }
